# AttemptPlaybackMod

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: multi-platform.yml
src/: main.cpp
src/core/: apx_format.hpp  apx_io.cpp  apx_io.hpp  checkpoint_manager.hpp  dashing_args.cpp  dashing_args.hpp  ghost_manager.hpp  ghost_pool.hpp  globals.cpp  globals.hpp  player_object_pool.hpp  preload_memory_estimator.hpp  random_color_ids.hpp  seed_utils.hpp.txt  sfx_handling.hpp  types.hpp
src/eclipse/: eclipseIntegration.cpp
src/hooks/: hook_CCScheduler.cpp  hook_editor_layer.cpp  hook_gjbasegamelayer.cpp  hook_hard_streak.cpp  hook_menu_layer.cpp  hook_pause_layer.cpp  hook_play_layer.cpp  hook_player_checkpoint.cpp  hook_player_object.cpp
src/ui/: attempt_manager_popup.cpp  attempt_manager_popup.hpp  color_selector_popup.hpp  ghost_distance_popup.cpp  ghost_distance_popup.hpp  playback_mod_menu_popup.cpp  playback_mod_menu_popup.hpp
src/utils/: ui_utils.cpp  ui_utils.hpp
